syntax = "proto3";
package grpc.user.service;


service UserServiceGrpc {
  rpc signin (SigninRequest) returns (UserResponse);
  rpc signup (SignupRequest) returns (UserResponse);
  rpc updateAccessToken (UpdateTokenRequest) returns (EmptyResponse);
  rpc checkValidateToken (TokenRequest) returns (UserResponse);
  rpc getUser (GetUserRequest) returns (UserResponse);
  rpc getUsersByIds (GetUsersByIdsRequest) returns (UserResponse);
  rpc checkEmailExists (EmailRequest) returns (IsExistsResponse);
}

message TokenRequest {
  string token = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message SigninRequest {
  string email = 1;
  string password = 2;
  int32 is_admin = 3;
}

message SignupRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message UpdateTokenRequest {
  int32 id = 1;
  string token = 2;
}

message EmailRequest {
  string email = 1;
}

message UserResponse {
  int32 status = 1;
  string message = 2;
 User data = 3;
}

message IsExistsResponse {
  int32 status = 1;
  string message = 2;
 User data = 3;
}

message GetUsersByIdsRequest {
  repeated int32 user_ids = 1;
}



message User {
  int32 id  = 1;
  string email = 2;
  string username = 3;
  string phone = 4;
  string avatar = 5;
  int32 gender  = 6;
  string created_at = 7;
  string updated_at = 8;
  int32 status = 9;
  repeated string roles = 10;
}
 message EmptyResponse {}
